New: Support for automatic setup of prometheus operator, centralised logging to EFK stack with hot/warm setup. Changed: - the etcd cluster is now run in docker controlled by kubelet, it can be colocated with the master nodes or fully external. - brought kubeadm-init.yaml template in sync with what is proposed in the documentation. - for components from github (dashboard, heapster, etcd-operator, prometheus-operator) a git ref can be configured in the variables.

--- a/ansible/etcd-operator.yaml
+++ b/ansible/etcd-operator.yaml
@@ -1,11 +1,9 @@
 #
-# Playbook to set up a dashboard.
-# - insecure setup without ssl
-# - for on-premises installation without real load balancers
+# Playbook to set up etcd operator.
 #
 --- 
 
-- name: Set up dashboard
+- name: Set up etcd operator
   hosts: masters
   remote_user: root
   gather_facts: no
