--- a/ansible/group_vars/all.yaml
+++ b/ansible/group_vars/all.yaml
@@ -12,15 +12,33 @@ HOST_ARCH: amd64
 MASTER_READY_WAIT_SEC: 30
 APISERVER_READY_WAIT_SEC: 30
 
+# Git tags for some artifacts.
+# Set to non-empty values to enforce the use of a particular ref rather than tip of master.
+GIT_DASHBOARD_TAG: ""
+GIT_HEAPSTER_TAG: ""
+GIT_ETCD_OPERATOR_TAG: ""
+GIT_PROMETHEUS_OPERATOR_TAG: ""
+
+# Settings for EFK stack setup
+ES_DATA_HOST_PATH: /var/lib/es
+ES_WARM_NODES_CPU_LIMIT: 16000m
+ES_WARM_NODES_MEM_LIMIT: 10Gi
+ES_WARM_NODES_CPU_REQUEST: 14000m
+ES_WARM_NODES_MEM_REQUEST: 8Gi
+ES_HOT_NODES_CPU_LIMIT: 16000m
+ES_HOT_NODES_MEM_LIMIT: 10Gi
+ES_HOT_NODES_CPU_REQUEST: 14000m
+ES_HOT_NODES_MEM_REQUEST: 8Gi
+
 # Network settings
 # Choices are: flannel, weavenet, calico
 NETWORK_PLUGIN: flannel
 POD_NETWORK_CIDR: 10.244.0.0/16
 
 # Settings for the network plugins
-CALICO_YAML_URL: "https://docs.projectcalico.org/master/getting-started/kubernetes/installation/hosted/kubeadm/1.7/calico.yaml"
+CALICO_YAML_URL: "https://docs.projectcalico.org/v3.1/getting-started/kubernetes/installation/hosted/kubernetes-datastore/calico-networking/1.7/calico.yaml"
 WEAVENET_YAML_URL_PREFIX: "https://cloud.weave.works/k8s/net?k8s-version="
-FLANNEL_YAML_URL: "https://raw.githubusercontent.com/coreos/flannel/v0.9.1/Documentation/kube-flannel.yml"
+FLANNEL_YAML_URL: "https://raw.githubusercontent.com/coreos/flannel/v0.10.0/Documentation/kube-flannel.yml"
 
 # Certificate settings (does not really matter for self-signed certificates in a private network)
 CERT_COMMON_NAME: "etcd"
@@ -31,30 +49,65 @@ CERT_STATE: "Hamburg"
 CERT_ORG_UNIT: "Deployment"
 
 # Software versions (used by installation via package manager)
-KUBERNETES_VERSION: "1.10.0"
+KUBERNETES_VERSION: "1.11.0"
 KUBERNETES_DNS_VERSION: "1.14.7"
 KUBERNETES_CNI_VERSION: "0.6.0"
-ETCD_VERSION: "3.2.15"
 KEEPALIVED_VERSION: "1.3.5"
 
 # Tags for some images
-ETCD_TAG: "3.0.17"
-PAUSE_TAG: "3.0"
-ETCD_OPERATOR_TAG: "v0.2.1"
+COREDNS_TAG: "1.1.3"
+PAUSE_TAG: "3.1"
+ETCD_TAG: "3.2.18"
 NGINX_VERSION: "1.14.0"
+ETCD_OPERATOR_TAG: "v0.9.2"
+CONFIGMAP_RELOAD_TAG: "v0.0.1"
+PROMETHEUS_OPERATOR_TAG: "v0.22.1"
+PROMETHEUS_TAG: "v2.3.1"
+BUSYBOX_TAG: "1.27.2"
+ELASTICSEARCH_TAG: "v5.6.4"
+ELASTICSEARCH_KUBERNETES_TAG: "6.2.3"
+CURATOR_TAG: "5.4.0"
+FLUENTD_ES_TAG: "v2.0.4"
+KIBANA_OSS_TAG: "6.2.2"
+DASHBOARD_TAG: "v1.8.3"
+#HEAPSTER_TAG: "v1.5.3"
+HEAPSTER_TAG: "v1.6.0-beta.1"
+HEAPSTER_GRAFANA_TAG: "v5.0.4"
+HEAPSTER_INFLUXDB_TAG: "v1.5.2"
 
 # Images for prefetching
 DOCKER_IMAGES: [
-  { name: "gcr.io/google_containers/kube-apiserver-{{ HOST_ARCH }}", tag: "v{{ KUBERNETES_VERSION }}" },
-  { name: "gcr.io/google_containers/kube-controller-manager-{{ HOST_ARCH }}", tag: "v{{ KUBERNETES_VERSION }}" },
-  { name: "gcr.io/google_containers/kube-scheduler-{{ HOST_ARCH }}", tag: "v{{ KUBERNETES_VERSION }}" },
-  { name: "gcr.io/google_containers/kube-proxy-{{ HOST_ARCH }}", tag: "v{{ KUBERNETES_VERSION }}" },
-  { name: "gcr.io/google_containers/k8s-dns-sidecar-{{ HOST_ARCH }}", tag: "{{ KUBERNETES_DNS_VERSION }}" },
-  { name: "gcr.io/google_containers/k8s-dns-kube-dns-{{ HOST_ARCH }}", tag: "{{ KUBERNETES_DNS_VERSION }}" },
-  { name: "gcr.io/google_containers/k8s-dns-dnsmasq-nanny-{{ HOST_ARCH }}", tag: "{{ KUBERNETES_DNS_VERSION }}" },
-  { name: "gcr.io/google_containers/etcd-{{ HOST_ARCH }}", tag: "{{ ETCD_TAG }}" },
-  { name: "gcr.io/google_containers/pause-{{ HOST_ARCH }}", tag: "{{ PAUSE_TAG }}" },
-  { name: "quay.io/coreos/etcd-operator", tag: "{{ ETCD_OPERATOR_TAG }}" },
+  { name: "bobrik/curator", tag: "{{ CURATOR_TAG }}" },
+  { name: "busybox", tag: "{{ BUSYBOX_TAG }}" },
+  { name: "dockerregistry.mylan.local:5000/fluentd-elasticsearch", tag: "{{ FLUENTD_ES_TAG }}" },
+  { name: "docker.elastic.co/kibana/kibana-oss", tag: "{{ KIBANA_OSS_TAG }}" },
+  { name: "k8s.gcr.io/coredns", tag: "{{ COREDNS_TAG }}" },
+  { name: "k8s.gcr.io/elasticsearch", tag: "{{ ELASTICSEARCH_TAG }}" }, #???
+  { name: "k8s.gcr.io/etcd-{{ HOST_ARCH }}", tag: "{{ ETCD_TAG }}" },
+  { name: "k8s.gcr.io/fluentd-elasticsearch", tag: "{{ FLUENTD_ES_TAG }}" },
+  { name: "k8s.gcr.io/heapster-{{ HOST_ARCH }}", tag: "{{ HEAPSTER_TAG }}" },
+  { name: "k8s.gcr.io/heapster-grafana-{{ HOST_ARCH }}", tag: "{{ HEAPSTER_GRAFANA_TAG }}" },
+  { name: "k8s.gcr.io/heapster-influxdb-{{ HOST_ARCH }}", tag: "{{ HEAPSTER_INFLUXDB_TAG }}" },
+  { name: "k8s.gcr.io/kube-apiserver-{{ HOST_ARCH }}", tag: "v{{ KUBERNETES_VERSION }}" },
+  { name: "k8s.gcr.io/kube-controller-manager-{{ HOST_ARCH }}", tag: "v{{ KUBERNETES_VERSION }}" },
+  { name: "k8s.gcr.io/kube-proxy-{{ HOST_ARCH }}", tag: "v{{ KUBERNETES_VERSION }}" },
+  { name: "k8s.gcr.io/kube-scheduler-{{ HOST_ARCH }}", tag: "v{{ KUBERNETES_VERSION }}" },
+  { name: "k8s.gcr.io/kubernetes-dashboard-{{ HOST_ARCH }}", tag: "{{ DASHBOARD_TAG }}" },
+  { name: "k8s.gcr.io/pause-{{ HOST_ARCH }}", tag: "{{ PAUSE_TAG }}" },
+  { name: "k8s.gcr.io/pause", tag: "{{ PAUSE_TAG }}" },
   { name: "nginx", tag: "{{ NGINX_TAG }}" }
+  { name: "quay.io/coreos/configmap-reload", tag: "{{ CONFIGMAP_RELOAD_TAG }}" },
+  { name: "quay.io/coreos/etcd-operator", tag: "{{ ETCD_OPERATOR_TAG }}" },
+  { name: "quay.io/coreos/etcd", tag: "v{{ ETCD_TAG }}" },
+  { name: "quay.io/coreos/prometheus-config-reloader", tag: "{{ PROMETHEUS_OPERATOR_TAG }}" },
+  { name: "quay.io/coreos/prometheus-operator", tag: "{{ PROMETHEUS_OPERATOR_TAG }}" },
+  { name: "quay.io/pires/docker-elasticsearch-kubernetes", tag: "{{ ELASTICSEARCH_KUBERNETES_TAG }}" },
+  { name: "quay.io/prometheus/prometheus", tag: "{{ PROMETHEUS_TAG }}" }
 ]
+
+
+
+
+
+
 
