--- a/ansible/roles/etcd/tasks/main.yaml
+++ b/ansible/roles/etcd/tasks/main.yaml
@@ -2,81 +2,82 @@
 # Sets up etcd on the masters.
 #
 ---
-- name: Get cfssl
-  local_action: "command wget --continue -O /tmp/cfssl https://pkg.cfssl.org/R1.2/cfssl_linux-{{ HOST_ARCH }} creates='/tmp/cfssl'"
-  run_once: true
-  args:
-    warn: no
+- name: Install preliminary kubelet configuration for systemd
+  copy: "src=20-etcd-service-manager.conf dest=/etc/systemd/system/kubelet.service.d/20-etcd-service-manager.conf mode=0644 owner=root group=root"
 
-- name: Copy cfssl
-  copy: src=/tmp/cfssl dest=/tmp/cfssl mode=0755
+- name: Activate and restart kubelet
+  systemd: "name=kubelet enabled=true daemon_reload=true state=restarted"
 
-- name: Get cfssljson
-  local_action: "command wget --continue -O /tmp/cfssljson https://pkg.cfssl.org/R1.2/cfssljson_linux-{{ HOST_ARCH }} creates='/tmp/cfssljson'"
-  run_once: true
-  args:
-    warn: no
+- name: Clean up /etc/kubernetes/manifests/etcd.yaml from previous installations
+  file: "path=/etc/kubernetes/manifests/etcd.yaml state=absent"
 
-- name: Copy cfssljson
-  copy: src=/tmp/cfssljson dest=/tmp/cfssljson mode=0755
+- name: Clean up /var/lib/etcd/member from previous installations
+  file: "path=/var/lib/etcd/member state=absent"
 
-- name: Create cert dir for etcd
-  file: path=/etc/etcd/pki state=directory
+- name: Clean up /etc/kubernetes/pki from previous installations
+  file: "path=/etc/kubernetes/pki state=absent"
 
-- name: Copy ca-config.json
-  copy: src=ca-config.json dest=/etc/etcd/pki/ca-config.json
+- name: Clean up /tmp/certs from previous installations on primary etcd node
+  file: "path=/tmp/certs state=absent"
   when: "'primary-etcd' in group_names"
 
-- name: Copy ca-csr.json
-  template: src=ca-csr.json.j2 dest=/etc/etcd/pki/ca-csr.json
+- name: Generate versioncfg.yaml on primary etcd node
+  template: src=versioncfg.yaml.j2 dest=/root/versioncfg.yaml
   when: "'primary-etcd' in group_names"
 
-- name: Copy client.json
-  copy: src=client.json dest=/etc/etcd/pki/client.json
+- name: Create temporary cert directories on primary etcd node
+  file: "path=/tmp/certs/{{ hostvars[item]['ansible_default_ipv4']['address'] }}/certs state=directory"
+  with_items: "{{ groups['etcd'] }}"
   when: "'primary-etcd' in group_names"
 
-- name: Generate server certificate
-  shell: "cd /etc/etcd/pki/ && /tmp/cfssl gencert -initca ca-csr.json | /tmp/cfssljson -bare ca -"
+- name: Generate kubeadmcfg.yaml on primary etcd node
+  template: src=kubeadmcfg.yaml.j2 dest=/tmp/certs/{{ hostvars[etcdnode]['ansible_default_ipv4']['address'] }}/kubeadmcfg.yaml
+  with_items: "{{ groups['etcd'] }}"
+  loop_control:
+    loop_var: etcdnode
   when: "'primary-etcd' in group_names"
 
-- name: Generate client certificate
-  shell: "cd /etc/etcd/pki/ && /tmp/cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config=ca-config.json -profile=client client.json | /tmp/cfssljson -bare client"
+- name: Create etcd CA
+  command: "kubeadm alpha phase certs etcd-ca --config=/root/versioncfg.yaml"
   when: "'primary-etcd' in group_names"
 
-- name: Create an archive from the certificate files for the etcd instances
-  archive: path=/etc/etcd/pki dest=/tmp/pki-etcd.tar.gz
+- name: Create script for creating all certs for all etcd nodes primary etcd node
+  template: "src=create-certs.sh.j2 dest=/root/create-certs.sh mode=0755"
   when: "'primary-etcd' in group_names"
 
-- name: Fetch certificate files for the etcd instances
-  fetch: src=/tmp/pki-etcd.tar.gz dest=/tmp/ flat=yes
+- name: Run script for creating all certs for all etcd nodes primary etcd node
+  command: "/root/create-certs.sh"
   when: "'primary-etcd' in group_names"
 
-- name: Unarchive certificate files for the etcd instances
-  unarchive: copy=yes src=/tmp/pki-etcd.tar.gz dest=/etc/etcd
-  when: "'secondary-etcds' in group_names"
-
-- name: Generate script for generating peer certs
-  template: src=gen-peer-certs-fix-perms.sh.j2 dest=/tmp/gen-peer-certs-fix-perms.sh mode=0755
-
-- name: Install etcd via package manager
-  package: name=etcd-{{ ETCD_VERSION }} state=present
-
-- name: Generate peer certs
-  command: /tmp/gen-peer-certs-fix-perms.sh
-
-- name: Create an archive from the certificate files for the masters
-  archive: path=/etc/etcd/pki/ca.pem,/etc/etcd/pki/client.pem,/etc/etcd/pki/client-key.pem dest=/tmp/pki-pems.tar.gz
+- name: Archive certificate files on primary etcd node
+  archive: "path=/tmp/certs dest=/tmp/certs.tar.gz"
   when: "'primary-etcd' in group_names"
 
-- name: Fetch certificate files for the masters
-  fetch: src=/tmp/pki-pems.tar.gz dest=/tmp/ flat=yes
+- name: Fetch certificate files from primary etcd node
+  fetch: "src=/tmp/certs.tar.gz dest=/tmp/ flat=yes"
   when: "'primary-etcd' in group_names"
 
-- name: Write etcd config file
-  template: src=etcd.conf.j2 dest=/etc/etcd/etcd.conf group=etcd owner=etcd mode=0644
+- name: Unarchive certificates on localhost...
+  local_action: "unarchive copy=no src=/tmp/certs.tar.gz dest=/tmp"
+  when: "'primary-etcd' in group_names"
 
-- name: Make sure database directory /var/lib/etcd exists and has the right permissions
-  file: path=/var/lib/etcd state=directory owner=etcd group=etcd mode=0755
+- name: Copy certs to all etcd nodes
+  copy: "src=/tmp/certs/{{ ansible_default_ipv4.address }}/pki dest=/etc/kubernetes/ mode=0644 directory_mode=0755 owner=root group=root"
 
-- name: Enable and start etcd
-  service: name=etcd enabled=yes state=restarted
+- name: Copy kubeadmcfg.yaml to all etcd nodes
+  copy: "src=/tmp/certs/{{ ansible_default_ipv4.address }}/kubeadmcfg.yaml dest=/root/"
+
+- name: Create etcd manifests on all etcd nodes
+  command: "kubeadm alpha phase etcd local --config=/root/kubeadmcfg.yaml"
+
+- name: Check etcd cluster health on primary etcd node
+  shell: "for i in 1 2 3 4 5; do docker run --rm --net host -v /etc/kubernetes:/etc/kubernetes gcr.io/google_containers/etcd-{{ HOST_ARCH }}:{{ ETCD_TAG }} etcdctl --cert-file /etc/kubernetes/pki/etcd/peer.crt --key-file /etc/kubernetes/pki/etcd/peer.key --ca-file /etc/kubernetes/pki/etcd/ca.crt --endpoints https://{{ ansible_default_ipv4.address }}:2379 cluster-health && exit 0; sleep 2s; done; /bin/false"
+  when: "'primary-etcd' in group_names"
+
+- name: Archive certs for master nodes on primary etcd node
+  archive: "path=/etc/kubernetes/pki/etcd/ca.crt,/etc/kubernetes/pki/apiserver-etcd-client.crt,/etc/kubernetes/pki/apiserver-etcd-client.key dest=/tmp/etcd-certs.tar.gz"
+  when: "'primary-etcd' in group_names"
+
+- name: Fetch master certs from primary etcd node
+  fetch: "src=/tmp/etcd-certs.tar.gz dest=/tmp/ flat=yes"
+  when: "'primary-etcd' in group_names"
