--- a/ansible/roles/prepare-nodes/tasks/main.yaml
+++ b/ansible/roles/prepare-nodes/tasks/main.yaml
@@ -12,6 +12,10 @@
   - kubeadm-{{ KUBERNETES_VERSION }}
   - kubernetes-cni-{{ KUBERNETES_CNI_VERSION }}
 
+- name: Install keepalived via package manager
+  package: name=keepalived-{{ KEEPALIVED_VERSION }} state=present
+  when: "'masters' in group_names"
+
 - name: Determine docker's cgroup driver and update kubelet accordinlgy
   shell: docker info 2>&1 | grep "Cgroup Driver" | cut -d" " -f3
   register: CGROUPS_DRIVER
@@ -20,10 +24,8 @@
 - name: Use docker's cgroup driver and update kubelet accordinlgy
   replace: "regexp='^(.*--cgroup-driver=)(systemd|cgroupfs)(.*)$' replace='\\1{{ CGROUPS_DRIVER.stdout_lines[0] }}\\3' path='/etc/systemd/system/kubelet.service.d/10-kubeadm.conf'"
 
-- name: Reload systemd units
-  # Fixme: 2.3.1.0 wants a 'name' argument here which is of course nonsense
-  #systemd: daemon-reload=yes
-  command: systemctl daemon-reload
+- name: Reload kubelet systemd unit
+  systemd: name=kubelet daemon-reload=yes
 
 - name: Enable kubelet
   service: name=kubelet enabled=yes
