--- a/ansible/roles/secondary-masters/tasks/secondary-master.yaml
+++ b/ansible/roles/secondary-masters/tasks/secondary-master.yaml
@@ -3,6 +3,10 @@
 #
 ---
 
-- name: Run 'kubeadm'
+- name: Run 'kubeadm' if this master node is also an etcd node (need to ignore two preflight errors here)
+  command: kubeadm init --ignore-preflight-errors=FileAvailable--etc-kubernetes-manifests-etcd.yaml --ignore-preflight-errors=Port-10250 --config=/root/kubeadm-init.yaml
+  when: "master == inventory_hostname and master in groups['etcd']"
+
+- name: Run 'kubeadm' if this master node is not an etcd node (all preflight errors active here)
   command: kubeadm init --config=/root/kubeadm-init.yaml
-  when: "master == inventory_hostname"
+  when: "master == inventory_hostname and master not in groups['etcd']"
