Fix #14: since patching the kubelet systemd configuration is no longer necessary from version 1.11, this is now done only on older kubernetes versions. Fix #18: use a simpler (and faster) method to create the join script. Move the labeling of elasticsearch nodes into the 'elasticsearch' role, so that inventories no longer need to contain the elasticsearch groups if installing the EFK stack is not intended.

--- a/ansible/.gitignore
+++ b/ansible/.gitignore
@@ -1,6 +1,6 @@
 *~
 *.retry
-md-kubernetes.inventory
-group_vars/md-kubernetes.yaml
-group_vars/singapore-office.yaml
-singapore-office.inventory
+md-*.inventory
+group_vars/md-*.yaml
+group_vars/*-office.yaml
+*-office.inventory
