--- a/ansible/roles/primary-master/tasks/main.yaml
+++ b/ansible/roles/primary-master/tasks/main.yaml
@@ -3,8 +3,13 @@
 #
 ---
 
-- name: Generate 'kubeadm' configuration file
-  template: src=kubeadm-init.yaml.j2 dest=/root/kubeadm-init.yaml
+- name: Generate 'kubeadm' configuration file for KUBERNETES_VERSION < 1.12.0
+  template: src=kubeadm-init-v1alpha2.yaml.j2 dest=/root/kubeadm-init.yaml
+  when: "KUBERNETES_VERSION is version_compare('1.12.0', '<')"
+ 
+- name: Generate 'kubeadm' configuration file for KUBERNETES_VERSION >= 1.12.0
+  template: src=kubeadm-init-v1alpha3.yaml.j2 dest=/root/kubeadm-init.yaml
+  when: "KUBERNETES_VERSION is version_compare('1.12.0', '>=')"
 
 - name: Remove /etc/systemd/system/kubelet.service.d/20-etcd-service-manager.conf on primary master
   file: "path=/etc/systemd/system/kubelet.service.d/20-etcd-service-manager.conf state=absent"
